Fixed display of animations on small screens

--- a/src/css/__components/_insights-description.scss
+++ b/src/css/__components/_insights-description.scss
@@ -3,8 +3,8 @@
     text-align: center;
     padding: 30px;
 
-    img {
-        width: 200px;
+    img, svg {
+        max-width: 200px;
         margin-bottom: 20px;
     }
 
